--- a/package.json
+++ b/package.json
@@ -19,17 +19,6 @@
         "nano": "8.2.2",
         "node-red": "latest",
         "node-red-contrib-aedes": "latest",
-        "node-red-contrib-blynk-ws": "latest",
-        "node-red-contrib-buffer-parser": "latest",
-        "node-red-contrib-chronos": "latest",
-        "node-red-contrib-ezviz": "latest",
-        "node-red-contrib-fs": "latest",
-        "node-red-contrib-fs-ops": "latest",
-        "node-red-contrib-influxdb": "latest",
-        "node-red-contrib-modbus": "latest",
-        "node-red-contrib-netatmo": "latest",
-        "node-red-contrib-netatmo-dashboard": "latest",
-        "node-red-contrib-opcua": "latest",
         "node-red-contrib-postgresql": "latest",
         "node-red-contrib-qrcode-generator": "latest",
         "node-red-contrib-string": "latest",
@@ -37,15 +26,17 @@
         "node-red-contrib-ui-led": "latest",
         "node-red-contrib-ui-media": "latest",
         "node-red-contrib-ui-time-scheduler": "latest",
-        "node-red-contrib-virtual-smart-home": "~2.13.1",
-        "node-red-contrib-web-worldmap": "latest",
         "node-red-dashboard": "latest",
         "node-red-node-base64": "latest",
-        "node-red-node-dropbox": "latest",
-        "node-red-node-email": "latest",
         "node-red-node-mongodb": "latest",
         "node-red-node-ui-list": "latest",
         "node-red-node-ui-table": "latest",
+        "node-red-contrib-simple-queue":"latest",
+        "node-red-contrib-cron-plus":"latest",
+        "node-red-contrib-uuid":"latest",
+        "node-red-contrib-actionflows":"latest",
+        "node-red-contrib-mongodb4":"latest",
+        "node-red-contrib-mongoql":"latest",
         "redis": "3.0.2",
         "when": "3.7.8"
     }
