--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
         "node-red-contrib-actionflows":"latest",
         "node-red-contrib-mongodb4":"latest",
         "node-red-contrib-mongoql":"latest",
+         "node-red-contrib-xterm":"latest",
+         "node-red-contrib-telegrambot":"latest",
+         "node-red-node-pusher":"latest",
         "redis": "3.0.2",
         "when": "3.7.8"
     }
