--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "node-red-node-pusher":"latest",
         "node-red-contrib-msg-router":"latest",
         "node-red-contrib-simple-message-queue":"latest",
+        "node-red-contrib-uibuilder":"latest",
         "redis": "3.0.2",
         "when": "3.7.8"
     }
