--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
         "node-red-node-pusher":"latest",
         "node-red-contrib-msg-router":"latest",
         "node-red-contrib-simple-message-queue":"latest",
-        "node-red-contrib-zapier":"latest",
-        "node-red-node-email":"latest"
+        "node-red-contrib-zapier":"latest"
    
     }
 }
